--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,11 +9,11 @@
 }
 
 a {
-  @apply text-red-700;
+  @apply border-white;
 }
 
 a:hover {
-  @apply border-b-2 border-red-700;
+  @apply border-b-2 border-white;
 }
 
 .content p {
